syntax = "proto3";

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
    string field = 10001;
}

extend google.protobuf.MessageOptions {
    string mapping = 20001;
    string merge_key = 20002;
}

extend google.protobuf.EnumValueOptions {
    string name = 30001;
}